# alpha-flow

./: .gitignore  config.json  pyproject.toml
alphaflow/: main.py  utils.py
alphaflow/apis/: __init__.py  fear_greed.py
alphaflow/remote/: __init__.py  blob_storage.py  storage.py
alphaflow/remote/storage/: __init__.py  azure.py  utils.py
