[tool.poetry]
name = "alpha-flow"
version = "0.1.0"
description = ""
authors = ["georgesmyr <70004539+georgesmyr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
zipline-reloaded = "^3.0.3"
alphalens-reloaded = "^0.4.3"
pyfolio-reloaded = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
